workloads/emma-portfolio/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: emma-portfolio
spec:
  basicAuth:
    secret: portfolio-basic-auth
