workloads/emma-portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emma-portfolio
  namespace: emma-portfolio
  labels:
    app: emma-portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: emma-portfolio
  template:
    metadata:
      labels:
        app: emma-portfolio
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: portfolio
          image: ghcr.io/emmatf/my_portfolio:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 5m
              memory: 16Mi
            limits:
              cpu: 100m
              memory: 64Mi
