workloads/emma-portfolio/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: emma-portfolio
  namespace: emma-portfolio
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`emma.bapttf.com`)
      kind: Rule
      middlewares:
        - name: basic-auth
      services:
        - name: emma-portfolio
          port: 80
  tls: {}
